# nns_benchmark

algorithms/DPG/: .gitignore  CMakeLists.txt  vcpkg.json
algorithms/DPG/src/: DPG_diverse.cpp  DPG_diverse_sift1m.cpp  DPG_diverse_sift1m_evaluation.cpp  DPG_diverse_sift1m_stats.cpp  DPG_index.cpp  DPG_index_sift1m.cpp  DPG_search.cpp  RandGen.cpp  kgraph-data.h  kgraph.cpp  kgraph.h  metric.cpp
